--- a/quote/quotes/templates/quotes/base.html
+++ b/quote/quotes/templates/quotes/base.html
@@ -14,13 +14,45 @@
   <body>
     <nav class="navbar navbar-expand-md navbar-light bg-light mb-4 border">
       <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'quotes:index' %}">Quote Lock(changes)</a>
+        <a class="navbar-brand" href="{% url 'quotes:index' %}">Quote Lock</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse"
         aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-      </div>
+        
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <!-- left side links in navbar -->
+          <ul class="navbar-nav me-auto mb-2 mb-md-0">
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'quotes:topics' %}">Topics</a>
+            </li>
+          </ul>
+          <!-- right side links in navbar -->
+          <ul class="navbar-nav ms-auto mb-2 mb-md-0">
+            {% if user.is_authenticated %}
+              <li class="nav-item"><span class="navbar-text me-2">Hello, {{ user.username }}</span></li>
+            {% else %}
+              <li class="nav-item"><a class="nav-link" href="{% url 'accounts:register' %}">Register</a></li>
+              <li class="nav-item"><a class="nav-link" href="{% url 'accounts:login' %}">Log in</a></li>
+            {% endif %}
+          </ul>
 
+          {% if user.is_authenticated %}
+            <form action="{% url 'accounts:logout' %}" method="post">
+              {% csrf_token %}
+              <input type="submit" value="Log out" class="btn btn-outline-secondary btn-sm">
+            </form>
+          {% endif %}
+        </div>
+      </div>
     </nav>
+    <main class="container">
+      <div class="pb-2 mb-2 border-bottom">
+        {% block page_header %}{% endblock page_header %}
+      </div>
+      <div>
+        {% block content %}{% endblock content %}
+      </div>
+    </main>
   </body>
 </html>
