--- a/quote/quotes/templates/quotes/new_topic.html
+++ b/quote/quotes/templates/quotes/new_topic.html
@@ -1,10 +1,16 @@
 {% extends 'quotes/base.html' %}
+{% load django_bootstrap5 %}
+
+{% block page_header %}
+    <h2>Add a new topic:</h2>
+{% endblock page_header %}
 
 {% block content %}
-    <p>Add a new topic:</p>
+    
     <form action="{% url 'quotes:new_topic' %}" method="post">
         {% csrf_token %}
-        {{ form.as_div }}
-        <input type="submit">
+        {% bootstrap_form form %}
+        <input type="submit" value="Add topic" class="btn btn-primary btn-lg">
     </form>
+
 {% endblock content %}
