--- a/accounts/templates/registration/register.html
+++ b/accounts/templates/registration/register.html
@@ -1,9 +1,10 @@
 {% extends 'quotes/base.html' %}
+{% load django_bootstrap5 %}
 
 {% block content %}
   <form action="{% url 'accounts:register' %}" method="post">
     {% csrf_token %}
-    {{ form.as_div }}
-    <button name="submit">Register</button>
+    {% bootstrap_form form %}
+    <input type="submit" value="Register" class="btn btn-primary btn-lg">
   </form>
 {% endblock content %}
